--- a/InvestmentTracker/Pages/Investments/Create.cshtml
+++ b/InvestmentTracker/Pages/Investments/Create.cshtml
@@ -41,7 +41,10 @@
 
     <!-- Contribution schedules are managed on Edit after creation -->
 
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="submit" class="btn btn-primary" title="Save" aria-label="Save">
+        <i class="bi bi-save"></i>
+        <span class="d-none d-sm-inline ms-1">Save</span>
+    </button>
     <a class="btn btn-secondary" asp-page="Index">Cancel</a>
 </form>
 
