--- a/InvestmentTracker/Pages/Shared/_Layout.cshtml
+++ b/InvestmentTracker/Pages/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Expenses/IncomeSources">Income Sources</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Expenses/Budgets">Budgets</a>
+                            </li>
                         }
                         else if (path.StartsWithSegments("/Investments") || path.StartsWithSegments("/Values") || path.StartsWithSegments("/Portfolio"))
                         {
